k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wine-quality-api-service
  labels:
    app: wine-quality-api
spec:
  type: ClusterIP
  selector:
    app: wine-quality-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
