k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wine-quality-api-ingress
  labels:
    app: wine-quality-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: wine-quality.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wine-quality-api-service
                port:
                  number: 80
